04_lists/04_list_basics
>>> courses =  ['History', 'Math', 'Physics', 'CompSci']
>>>
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci']
>>> print(len(courses))
4
>>>
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci']
>>>
>>> print(courses[0])
History
>>>
>>> print(courses[-1])
CompSci
>>> print(courses[1])
Math
>>> print(courses[4])
Traceback (most recent call last):
  File "<python-input-11>", line 1, in <module>
    print(courses[4])
          ~~~~~~~^^^
IndexError: list index out of range
>>> print(courses[::-1])
['CompSci', 'Physics', 'Math', 'History']
>>> print(courses[:1])
['History']
>>> print(courses[:2])
['History', 'Math']
>>> print(courses[:2:1])
['History', 'Math']
>>> print(courses[:2:2])
['History']
>>> print(courses[:3:2])
['History', 'Physics']
>>> print(courses[1:3:2])
['Math']
>>> print(courses[1:2])
['Math']
>>> print(courses[0:2])
['History', 'Math']
>>> print(courses[:2])
['History', 'Math']
>>> print(courses[2:])
['Physics', 'CompSci']
>>>
>>>
>>> courses.append('Art')
>>>
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci', 'Art']
>>> courses.insert(0,'Art')
>>> print(courses)
['Art', 'History', 'Math', 'Physics', 'CompSci', 'Art']
>>>
>>> courses.pop(-1,'Art')
Traceback (most recent call last):
  File "<python-input-31>", line 1, in <module>
    courses.pop(-1,'Art')
    ~~~~~~~~~~~^^^^^^^^^^
TypeError: pop expected at most 1 argument, got 2
>>> courses.pop('Art')
Traceback (most recent call last):
  File "<python-input-32>", line 1, in <module>
    courses.pop('Art')
    ~~~~~~~~~~~^^^^^^^
TypeError: 'str' object cannot be interpreted as an integer
>>> courses.pop(-1)
'Art'
>>> print(courses)
['Art', 'History', 'Math', 'Physics', 'CompSci']
>>> courses_2 = ['Art','Education']
>>> courses.insert(0, courses_2)
>>> print(courses)
[['Art', 'Education'], 'Art', 'History', 'Math', 'Physics', 'CompSci']
>>>
>>> courses.pop(1)
'Art'
>>> print(courses)
[['Art', 'Education'], 'History', 'Math', 'Physics', 'CompSci']
>>>
>>> print(courses[0])
['Art', 'Education']
>>>
>>> courses.pop(0)
['Art', 'Education']
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci']
>>>
>>> courses.extend(courses_2)
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci', 'Art', 'Education']
>>>
>>> courses.remove('Math')
>>>
>>> print(courses)
['History', 'Physics', 'CompSci', 'Art', 'Education']
>>>
>>> courses.pop()
'Education'
>>> print(courses)
['History', 'Physics', 'CompSci', 'Art']
>>> popped = courses.pop()
>>> print(courses)
['History', 'Physics', 'CompSci']
>>> print(popped)
Art
>>>
>>> print(type(popped))
<class 'str'>
>>> print(courses)
['History', 'Physics', 'CompSci']
>>>
>>> courses.insert(1, 'Math')
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci']
>>> print(courses[::-1])
['CompSci', 'Physics', 'Math', 'History']
>>> print(courses.reverse)
<built-in method reverse of list object at 0x0000024DDFFB3940>
>>>
>>> print(courses.reverse())
None
>>>
>>> print(courses)
['CompSci', 'Physics', 'Math', 'History']
>>>
>>> print(courses.reverse())
None
>>> print(courses)
['History', 'Math', 'Physics', 'CompSci']
>>> courses.sort()
>>> print(courses)
['CompSci', 'History', 'Math', 'Physics']
>>> num = [1,3,5,6,6,5,7]
>>> print(num)
[1, 3, 5, 6, 6, 5, 7]
>>> num.sort()
>>> print(num)
[1, 3, 5, 5, 6, 6, 7]
>>> num.reserve()
Traceback (most recent call last):
  File "<python-input-80>", line 1, in <module>
    num.reserve()
    ^^^^^^^^^^^
AttributeError: 'list' object has no attribute 'reserve'. Did you mean: 'reverse'?
>>> num.reserse()
Traceback (most recent call last):
  File "<python-input-81>", line 1, in <module>
    num.reserse()
    ^^^^^^^^^^^
AttributeError: 'list' object has no attribute 'reserse'. Did you mean: 'reverse'?
>>> num.reverse()
>>> print(num)
[7, 6, 6, 5, 5, 3, 1]
>>> num.sort(reverse=True)
>>> print(num)
[7, 6, 6, 5, 5, 3, 1]
>>> num.sort(reverse=True)
>>> print(num)
[7, 6, 6, 5, 5, 3, 1]
>>> num.sort(reverse=False)
>>> print(num)
[1, 3, 5, 5, 6, 6, 7]
>>> num.sort(reverse=False)
>>> print(num)
[1, 3, 5, 5, 6, 6, 7]
>>>
>>> print(courses.sort(reverse = Ture))
Traceback (most recent call last):
  File "<python-input-93>", line 1, in <module>
    print(courses.sort(reverse = Ture))
                                 ^^^^
NameError: name 'Ture' is not defined
>>> print(courses.sort(reverse = True))
None
>>> print(courses)
['Physics', 'Math', 'History', 'CompSci']
>>>
>>> print(courses.sort(reverse = False))
None
>>> print(courses)
['CompSci', 'History', 'Math', 'Physics']
>>> sort_courses = courses.sort(reverse = Ture)
Traceback (most recent call last):
  File "<python-input-99>", line 1, in <module>
    sort_courses = courses.sort(reverse = Ture)
                                          ^^^^
NameError: name 'Ture' is not defined
>>> sort_courses = courses.sort(reverse = True)
>>> print(sort_courses)
None
>>> print(courses)
['Physics', 'Math', 'History', 'CompSci']
>>> 3 CVs and Tracker - Member Technical Staff – QA - Zoho Technology - Chennai
  File "<python-input-103>", line 1
    3 CVs and Tracker - Member Technical Staff – QA - Zoho Technology - Chennai
                                               ^
SyntaxError: invalid character '–' (U+2013)
>>> courses =  ['History', 'Math', 'Physics', 'CompSci']
>>>
>>> sorted(courses)
['CompSci', 'History', 'Math', 'Physics']
>>> sorted_courses = sorted (courses)
>>> print (sorted_courses)
['CompSci', 'History', 'Math', 'Physics']
>>> sorted(courses)
['CompSci', 'History', 'Math', 'Physics']
>>> print (courses)
['History', 'Math', 'Physics', 'CompSci']
>>>
>>> num = [1,3,5,6,6,5,7]
>>> print (min(num))
1
>>> print (max(num))
7
>>> print (sum(num))
33
>>> courses =  ['History', 'Math', 'Physics', 'CompSci']
>>>
>>> print (courses.index('CompSci'))
3
>>> print (courses.index('Art'))
Traceback (most recent call last):
  File "<python-input-119>", line 1, in <module>
    print (courses.index('Art'))
           ~~~~~~~~~~~~~^^^^^^^
ValueError: 'Art' is not in list
>>> print ('Art' in courses)
False
>>> print ('Math' in courses)
True
>>> for item in courses:
...     print(item)
...
History
Math
Physics
CompSci
>>>
>>> for course in courses:
...     print(course)
...
History
Math
Physics
CompSci
>>> for index, course in enumarate(courses):
...     print(index, course)
...
Traceback (most recent call last):
  File "<python-input-125>", line 1, in <module>
    for index, course in enumarate(courses):
                         ^^^^^^^^^
NameError: name 'enumarate' is not defined. Did you mean: 'enumerate'?
>>> for index, course in enumerate(courses):
...     print(index, course)
...
0 History
1 Math
2 Physics
3 CompSci
>>> for slno, course in enumerate(courses, start=1):
...     print(slno, course)
...
1 History
2 Math
3 Physics
4 CompSci
>>>
>>> course_str = "".join(courses)
>>> print (course_str)
HistoryMathPhysicsCompSci
>>>
>>> course_str = ",".join(courses)
>>> print (course_str)
History,Math,Physics,CompSci
>>>
>>> course_str = " - ".join(courses)
>>>
>>> print (course_str)
History - Math - Physics - CompSci
>>>
>>> new_list = course_str.split(' - ')
>>> print (new_list)
['History', 'Math', 'Physics', 'CompSci']
>>> print (course_str)
History - Math - Physics - CompSci
>>> cs_courses = {'History', 'Math', 'Physics', 'CompSci'}
>>> print (cs_courses)
{'CompSci', 'Math', 'Physics', 'History'}
>>> print (cs_courses)
{'CompSci', 'Math', 'Physics', 'History'}
>>> print (cs_courses)
{'CompSci', 'Math', 'Physics', 'History'}
>>> print (cs_courses)
{'CompSci', 'Math', 'Physics', 'History'}
>>> print (cs_courses[0])
Traceback (most recent call last):
  File "<python-input-147>", line 1, in <module>
    print (cs_courses[0])
           ~~~~~~~~~~^^^
TypeError: 'set' object is not subscriptable
>>> print (cs_courses(0))
Traceback (most recent call last):
  File "<python-input-148>", line 1, in <module>
    print (cs_courses(0))
           ~~~~~~~~~~^^^
TypeError: 'set' object is not callable
>>> cs_courses = {'History', 'Math', 'Physics', 'CompSci', 'Math'}
>>> print (cs_courses)
{'CompSci', 'Math', 'Physics', 'History'}
>>> print ('Math' in cs_courses)
True
>>> for course in cs_courses:
...     print (course)
...
CompSci
Math
Physics
History
>>> for course in enumerate(cs_courses):
...     print (course)
...
(0, 'CompSci')
(1, 'Math')
(2, 'Physics')
(3, 'History')
>>>
>>> for course in enumerate(cs_courses, start=1):
...     print (course)
...
(1, 'CompSci')
(2, 'Math')
(3, 'Physics')
(4, 'History')
>>> art_courses = {'History', 'Math', 'Art', 'Design'}
>>>

>>> print (cs_courses.intersection(art_courses))
{'Math', 'History'}
>>>
>>> cs_courses = {'History', 'Math', 'Physics', 'CompSci'}
>>> print (cs_courses.intersection(art_courses))
{'Math', 'History'}
>>>
>>> print (cs_courses.difference(art_courses))
{'CompSci', 'Physics'}
>>> print (art_courses.difference(cs_courses))
{'Art', 'Design'}
>>> print (art_courses.intersection(cs_courses))
{'Math', 'History'}
>>>
>>> print (art_courses.union(cs_courses))
{'History', 'Art', 'Physics', 'CompSci', 'Math', 'Design'}
>>> print (cs_courses.union(art_courses))
{'History', 'Art', 'Physics', 'CompSci', 'Math', 'Design'}
>>>
